# correios-scrapy

./: .flake8  .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: pull_request_opoened.yaml
correios_cep/: output.jsonl  scrapy.cfg
correios_cep/correios_cep/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
correios_cep/correios_cep/spiders/: range_cep.py
data/: output.jsonl
internal_jobs/jira/: issue_description.py
modules/jira/: issue.py
